@@ -1,3 +1,8 @@
+2006-12-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* UI/Common/UIxAclEditor.m ([UIxAclEditor -saveAclsAction]): added
+	code to handle the publishing of freebusy information.
+
 2006-12-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
